--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -7,4 +7,52 @@
     android:layout_height="match_parent"
     tools:context=".CalendarActivity">
 
+    <LinearLayout
+        android:layout_width="411dp"
+        android:layout_height="731dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp"
+        android:padding="40dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Goals Complete"
+            android:textSize="30dp"/>
+
+        <TextView
+            android:id="@+id/goalsCompleteText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="[COMPLETE]/[POSSIBLE]" />
+
+        <ProgressBar
+            android:id="@+id/goalsProgressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit Previous Days"
+            android:paddingTop="40dp"
+            android:textSize="30dp"/>
+
+        <CalendarView
+            android:id="@+id/calendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+        <Button
+            android:id="@+id/changeDateButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Confirm" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
