Added backend functionality
Work remaining for backend:
- Display error dialogs when failing to connect
- Sending picture to backend model and getting a result
- Calculating monthly goals
- Make register feature

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -19,7 +19,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Goals Complete"
+            android:text="Monthly Goals Complete"
             android:textSize="30dp"/>
 
         <TextView
