--- a/app/src/main/res/layout/set_target_dialog.xml
+++ b/app/src/main/res/layout/set_target_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="409dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="1dp"
@@ -16,7 +16,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Set Target Calories"
             android:textSize="32dp"
